Add post, delete and put operations for Student functionality.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,13 @@
 server:
   port: 8082
+  error:
+    include-message: always
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/student
     username: amigoscode
     password: amigoscode
+
   jpa:
     hibernate:
       ddl-auto: create-drop
